change description and name of member

--- a/contact-us.html
+++ b/contact-us.html
@@ -318,7 +318,7 @@
                               <div class="display-table-cell footer-newsletter">
                                   <form action="#" method="post">
                                     <label class="h4">Newsletter</label>
-                                      <p>Be the first to hear about new trending and offers and see how you've helped.</p>
+                                      <p>Be the first to learn about new trends and special deals, and see how your contributions have aided.</p>
                                       <div class="input-group">
                                           <input type="email" class="input-group__field newsletter__input" name="EMAIL" value="" placeholder="Email address" required="">
                                           <span class="input-group__btn">
@@ -347,7 +347,7 @@
                       <!--End Footer Copyright-->
                       <!--Footer Payment Icon-->
                       <div class="col-12 col-sm-12 col-md-6 col-lg-6 order-0 order-md-1 order-lg-1 order-sm-0 payment-icons text-right text-md-center">
-                          <span></span>Developed by <b>Arum</b>, <b>Minan</b> and <b>Bondo</b>
+                          <span></span>Developed by <b>risa</b>, <b>Minan</b> and <b>Bondo</b>
                       </div>
                       <!--End Footer Payment Icon-->
                   </div>
